@@ -2,8 +2,15 @@ import java.util.*;
 
 public class Main {
     public static void main(String[] args) {
-        List<String> word = new ArrayList<>(Arrays.asList("zaq", "xsw", "cde", "zaq", "xsw", "bgt", "xsw"));
-        Set<String> set = new HashSet<>(word);
-        System.out.println(set);
+        List<String> words = new ArrayList<>(List.of("один", "два", "два", "три", "три", "три","один","один","один"));
+        Map<String, Integer> map = new HashMap<>();
+        for (String word : words)
+            if (map.containsKey(word)) {
+                Integer count = map.get(word) + 1;
+                map.put(word, count);
+            } else {
+                map.put(word, 1);
+            }
+        System.out.println(map.values());
     }
 }
